# mlir-learning

automata-engine/: .gitignore  CMakeLists.txt  tablegen_compile_commands.yml  test.mlir
automata-engine/include/automata/: AutomataDialect.h  AutomataDialect.td  AutomataPass.h  CMakeLists.txt
automata-engine/lib/Automata/: Automata2Arith.cpp  AutomataDialect.cpp  CMakeLists.txt
automata-engine/tools/automata-opt/: CMakeLists.txt  automata-opt.cpp
